# modular_arm_ros2

./: README.md
docker_image/: docker-compose.yml
firmware/Main_Serial/: platformio.ini
firmware/Main_Serial/src/: main.cpp
firmware/Node_DC/: platformio.ini
firmware/Node_DC/src/: main.cpp
firmware/Node_Stepper/: platformio.ini
firmware/Node_Stepper/src/: main.cpp
ws_custom_robot/install/: local_setup.sh  setup.sh
ws_custom_robot/install/custom_robot_bringup/share/custom_robot_bringup/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  (+1 more)
ws_custom_robot/log/: latest_build
ws_custom_robot/src/custom_robot_bringup/: CMakeLists.txt  package.xml
ws_custom_robot/src/custom_robot_bringup/launch/: moveit.rviz
ws_custom_robot/src/custom_robot_config/: CMakeLists.txt
ws_custom_robot/src/custom_robot_config/config/: initial_positions.yaml  joint_limits.yaml  ros2_controllers.yaml
ws_custom_robot/src/custom_robot_config/launch/: demo.launch.py  moveit_rviz.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
ws_custom_robot/src/custom_robot_controller/: CMakeLists.txt  package.xml
ws_custom_robot/src/custom_robot_controller/config/: custom_robot_controllers.yaml
ws_custom_robot/src/custom_robot_controller/launch/: controller.launch.py  slider_controller.launch.py
ws_custom_robot/src/custom_robot_controller/src/: custom_robot_interface.cpp  slider_control.cpp
ws_custom_robot/src/custom_robot_description/: CMakeLists.txt  package.xml
ws_custom_robot/src/custom_robot_description/launch/: display.launch.py  gazebo.launch.py
ws_custom_robot/src/custom_robot_description/meshes/: base_link.stl  base_link_left.stl  base_link_right.stl  base_lower.stl  dc_link_base.stl  dc_link_cover.stl  dc_link_top.stl  long_arm_middle.stl  long_arm_top.stl
ws_custom_robot/src/custom_robot_description/rviz/: display.rviz
ws_custom_robot/src/custom_robot_description/urdf/: custom_robot.urdf.xacro  custom_robot_gazebo.xacro  custom_robot_ros2_control.xacro
ws_custom_robot/src/custom_robot_moveit/: CMakeLists.txt
ws_custom_robot/src/custom_robot_moveit/config/: custom_robot.srdf  initial_position.yaml  joint_limits.yaml  moveit_controllers.yaml
ws_custom_robot/src/custom_robot_moveit/launch/: moveit.launch.py
(+116 files in other folders)
